webapp/tasks/python/capital-if/python-errors.txt
  File "main.py", line 6
    If(age > 30): print("You're old")
    ^^^^^^^^^^^^
SyntaxError: illegal target for annotation
